--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Django==2.2.10
+asgiref==3.2.3
+dj-database-url==0.5.0
+Django==2.2
+django-heroku==0.3.1
+gunicorn==19.9.0
+pkg-resources==0.0.0
+psycopg2==2.8.4
 pytz==2019.3
 sqlparse==0.3.0
+whitenoise==5.0.1
